# DALLE2-video

./: .gitignore  README.md  _dalle2_pytorch.py  eval_clip.py  preprocess.py  pyproject.toml  requirements.txt  setup.py  train_clip.py  train_decoder.py
configs/: celebv-text.yaml  deepspeed_config.json  zero_stage3_offload_config.json
dalle2_video/: __init__.py  dalle2_video.py  datasets.py  trainer.py  utils.py  video_encoder.py
