[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dalle2_video"
description = "Video version of DALLE2_pytorch"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
# requires-python = ""
# dependencies = []

[project.optional-dependencies]
dev = [
  "black",
]

[tool.setuptools.packages.find]
exclude = ["build", "tests"]